# noc

./: .ansible-lint  .coveragerc  .dockerignore  .eslintrc.json  .flake8  .gitignore  .gitlab-ci.yml  .hgignore  .hgtags  .prettierrc  .pylintrc  .style.yapf  .yamllint  404.html  500.html  AUTHORS  CHANGELOG  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  Cargo.toml  Dockerfile  INSTALL  LICENSE  LICENSE.RU  LICENSE.md  MANIFEST-ACTIVATOR  MANIFEST-SYNC  MANIFEST.in  NoC  README  README.md  SECURITY.md  VERSION  __init__.py  basic-cocomo-report-organic-20190125T120700.txt  build.py  build.rs  (+28 more)
.cargo/: config.toml
.devcontainer/: devcontainer.json
.docker/: Dockerfile  Dockerfile.build  Dockerfile.build3  Dockerfile.dev  Dockerfile.static  Readme.md  docker-compose.yml  noc.conf
.github/: CODEOWNERS  FUNDING.yml
.requirements/: activator.txt  bh.txt  cache-memcached.txt  cache-redis.txt  classifier.txt  cython.txt  dev.txt  docs.txt  lint.txt  login-ldap.txt  login-pam.txt  login-radius.txt  node.txt  ping.txt  prod-tools.txt  reverted_modules.xtx  sender-kafka.txt  sentry.txt  supervisor.txt  test.txt  testing.txt  vcenter.txt  zabbix.txt
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
add-from-network-scan-howto/: index.html
admin/: index.html
admin.old/: base_site.html
agent-reference/: index.html
alarm-classes-reference/: index.html
alarm-escalation-reference/: index.html
alarm-reference-format/: index.html
ansible/: .ansible-ci.yml  README.md  consul.yml  deploy.yml  disks.yml  ha.yml  post.yml  pre.yml  site.yml
ansible_deploy/: LICENSE  LICENSE.RU
asn/: models.py
backup-noc-howto/: index.html
bi-models-reference/: index.html
blog/: index.html
bundle/: .env  Readme.md  bundle.sh  clear.sh  docker-compose-dbs.yml  docker-compose-discovery.yml  docker-compose-fm.yml  docker-compose-infra.yml  docker-compose-ping.yml  docker-compose-pm.yml  docker-compose-sae.yml  docker-compose-web.yml  docker-compose.yml  run.sh
caps-reference/: index.html
card/: index.html
cleaning-false-config-changes-howto/: index.html
cm/: __init__.py  admin.py  diff.html  engine.py  models.py  repoapp.py  urls.py  vcs.py  view.html  views.py
cmibs/: adsl_line_mib.py  airespace_switching_mib.py  airespace_wireless_mib.py  bgp4_mib.py  bridge_mib.py  cambium_pmp80211_mib.py  cisco_cdp_mib.py  cisco_class_based_qos_mib.py  cisco_mac_notification_mib.py  cisco_port_channel_mib.py  cisco_pppoe_mib.py  cisco_rttmon_mib.py  cisco_vlan_membership_mib.py  cisco_vpdn_mgmt_mib.py  cisco_vrf_mib.py  cisco_vtp_mib.py  disman_ping_mib.py  entity_mib.py  entity_sensor_mib.py  entity_state_mib.py  etherlike_mib.py  fastpath_wlan_access_point_mib.py  host_resources_mib.py  huawei_aaa_mib.py  huawei_bgp_vpn_mib.py  huawei_cbqos_mib.py  huawei_device_mib.py  huawei_entity_extent_mib.py  huawei_environment_mib.py  if_mib.py  (+27 more)
rust/agent/: Cargo.toml
rust/agent/benches/: pktmodel_benchmark.rs  twamp_benchmark.rs
rust/agent/libs/agent-derive/: Cargo.toml
rust/agent/libs/agent-derive/src/: lib.rs
rust/agent/src/: agent.rs  cli.rs  cmd.rs  error.rs  feature.rs  lib.rs  main.rs  meta.rs  nvram.rs  registry.rs  sender.rs  state.rs  timing.rs  zk.rs
rust/agent/src/collectors/: base.rs  dns.rs  mod.rs  registry.rs  test.rs  twamp_reflector.rs  twamp_sender.rs
rust/agent/src/collectors/block_io/: collector.rs  config.rs  mod.rs  out.rs
rust/agent/src/collectors/cpu/: collector.rs  config.rs  mod.rs  out.rs
rust/agent/src/collectors/cpu/platform/: default.rs  linux.rs  mod.rs
rust/agent/src/collectors/dns/: collector.rs  config.rs  mod.rs  out.rs
rust/agent/src/collectors/fs/: collector.rs  config.rs  mod.rs  out.rs
rust/agent/src/collectors/http/: collector.rs  config.rs  mod.rs  out.rs
rust/agent/src/collectors/memory/: collector.rs  config.rs  mod.rs  out.rs
rust/agent/src/collectors/memory/platform/: default.rs  freebsd.rs  linux.rs  macos.rs  mod.rs  openbsd.rs  windows.rs
rust/agent/src/collectors/modbus_rtu/: collector.rs  config.rs  mod.rs  out.rs
rust/agent/src/collectors/modbus_tcp/: collector.rs  config.rs  mod.rs  out.rs
rust/agent/src/collectors/network/: collector.rs  config.rs  mod.rs  out.rs
rust/agent/src/collectors/test/: collector.rs  config.rs  mod.rs  out.rs
rust/agent/src/collectors/twamp_reflector/: collector.rs  config.rs  mod.rs  out.rs
rust/agent/src/collectors/twamp_sender/: collector.rs  config.rs  mod.rs  out.rs
rust/agent/src/collectors/uptime/: collector.rs  config.rs  mod.rs  out.rs
rust/agent/src/config/: cfg.rs  config.rs  mod.rs
rust/agent/src/config/parser/: base.rs  mod.rs
rust/agent/src/config/parser/json/: base.rs  mod.rs
rust/agent/src/config/parser/yaml/: base.rs  mod.rs
rust/agent/src/config/reader/: base.rs  mod.rs
rust/agent/src/config/reader/file/: base.rs  mod.rs
rust/agent/src/config/reader/http/: base.rs  mod.rs
rust/agent/src/config/resolver/: base.rs  mod.rs
rust/agent/src/config/resolver/static/: base.rs  mod.rs
rust/agent/src/config/resolver/zk/: base.rs  mod.rs
rust/agent/src/proto/: connection.rs  frame.rs  mod.rs  modbus.rs  pktmodel.rs  tos.rs  udp.rs
rust/agent/src/proto/pktmodel/: base.rs  cbr.rs  g711.rs  g729.rs  imix.rs  mod.rs  registry.rs
rust/agent/src/proto/twamp/: accept_session.rs  mod.rs  ntp.rs  request_tw_session.rs  server_greeting.rs  server_start.rs  setup_response.rs  start_ack.rs  start_sessions.rs  stop_sessions.rs  test_request.rs  test_response.rs
rust/agent/src/sysid/: default.rs  linux.rs  mod.rs  util.rs
rust/datastream/: Cargo.toml
rust/datastream/src/: error.rs  lib.rs
rust/datastream/src/change/: mod.rs
rust/datastream/src/client/: http.rs  mod.rs
rust/datastream/src/state/: memory.rs  mod.rs  plain.rs
rust/datastream/src/sync/: mod.rs
rust/dnssync/: Cargo.toml
rust/dnssync/src/: cmd.rs  dnszone.rs  main.rs
rust/dnssync/src/change/: bind.rs
rust/noc-dns-sync/: Cargo.toml
rust/noc-dns-sync/src/: cmd.rs  dnszone.rs  error.rs  main.rs
rust/noc-dns-sync/src/change/: bind.rs  mod.rs
(+33564 files in other folders)
