[package]
name = "agent"
version = "0.5.0"
authors = ["The NOC Project"]
edition = "2018"
description = "NOC Agent"

[[bin]]
name = "noc-agent"
path = "src/main.rs"

[features]
default = [
    # Collectors, in sorted order
    "block-io",
    "cpu",
    "dns",
    "fs",
    "memory",
    "network",
    "test",
    "twamp-sender",
    "twamp-reflector",
    "uptime",
    # Config
    "config-static",
    "config-zk",
    "config-file",
    "config-json",
    "config-yaml",
]

#
# Collectors
#

# block-io collector
block-io = ["systemstat"]
# cpu collector
cpu = ["systemstat"]
# dns collector
dns = ["trust-dns-proto"]
# fs collector
fs = ["systemstat"]
# memory collector
memory = ["systemstat"]
# network collector
network = ["systemstat"]
# test collector
test = []
# modbus_serial collector
# modbus_serial = []
# twamp-sender collector
twamp-sender = []
# twamp-reflector collector
twamp-reflector = []
# uptime collector
uptime = ["systemstat"]

#
# Config
#

# Static resolver
config-static = []
# ZeroConf resolver
config-zk = ["trust-dns-proto", "trust-dns-resolver"]
# File reader
config-file = []
# JSON parser
config-json = []
# YAML parser
config-yaml = ["serde_yaml"]

[dependencies]
chrono = "0.4"
clap = { version = "2.33", default-features = false }
log = "0.4"
env_logger = "0.8"
tokio = { version = "1.5", features = ["full"] }
bytes = "1.0"
serde = {version = "1.0", features=["derive"]}
async-trait = "0.1"
cfg-if = "1.0"
enum_dispatch = "0.3"
rand = "0.8"
lazy_static = "1.4"
thiserror = "1.0"
serde_json = "1.0"
# Optional dependencies
trust-dns-proto = {version = "0.20", optional = true}
trust-dns-resolver = {version = "0.20", optional = true}
serde_yaml = {version = "0.8", optional = true}
systemstat = {version = "0.1", optional = true}

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "twamp_benchmark"
harness = false

[[bench]]
name = "pktmodel_benchmark"
harness = false
