[package]
authors = ["The NOC Project"]
description = "NOC Agent"
edition = "2018"
name = "agent"
version = "0.8.1"

[[bin]]
name = "noc-agent"
path = "src/main.rs"

[features]
default = [
  # Collectors, in sorted order
  "block-io",
  "cpu",
  "dns",
  "fs",
  "http",
  "memory",
  "modbus-tcp",
  "modbus-rtu",
  "network",
  "test",
  "twamp-sender",
  "twamp-reflector",
  "uptime", # Config
  "config-static",
  "config-zk",
  "config-file",
  "config-http",
  "config-json",
  "config-yaml",
]
#
# Collectors
#
# block-io collector
block-io = ["systemstat"]
# cpu collector
cpu = ["systemstat"]
# dns collector
dns = ["trust-dns-proto"]
# fs collector
fs = ["systemstat"]
# http collector
http = ["reqwest"]
# memory collector
memory = ["systemstat"]
# modbus-tcp collector
modbus-tcp = ["tokio-modbus"]
# modbus-tcp collector
modbus-rtu = ["tokio-modbus", "tokio-serial"]
# network collector
network = ["systemstat"]
# test collector
test = []
# twamp-sender collector
twamp-sender = []
# twamp-reflector collector
twamp-reflector = []
# uptime collector
uptime = ["systemstat"]
#
# Config
#
# Static resolver
config-static = []
# ZeroConf resolver
config-zk = ["trust-dns-proto", "trust-dns-resolver", "systemstat"]
# File reader
config-file = []
# HTTP reader
config-http = ["reqwest"]
# JSON parser
config-json = []
# YAML parser
config-yaml = ["serde_yaml"]

[dependencies]
async-trait = "0.1"
bytes = "1.0"
cfg-if = "1.0"
chrono = "0.4"
clap = {version = "2.33", default-features = false}
enum_dispatch = "0.3"
env_logger = "0.8"
lazy_static = "1.4"
log = "0.4"
rand = "0.8"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0", features = ["raw_value"]}
thiserror = "1.0"
tokio = {version = "1.10", features = ["full"]}
# Optional dependencies
reqwest = {version = "0.11", features = [
  "rustls-tls",
  "gzip",
  "deflate",
  "trust-dns",
], optional = true}
serde_yaml = {version = "0.8", optional = true}
systemstat = {version = "0.1", optional = true}
tokio-modbus = {version = "0.5", default-features = false, features = [
  "rtu",
  "tcp",
], optional = true}
tokio-serial = {version = "5.4", optional = true}
trust-dns-proto = {version = "0.20", optional = true}
trust-dns-resolver = {version = "0.20", optional = true}

[dev-dependencies]
assert_approx_eq = "1.1"
criterion = "0.3"

[[bench]]
harness = false
name = "twamp_benchmark"

[[bench]]
harness = false
name = "pktmodel_benchmark"
