[package]
name = "datastream"
version = "0.1.0"
authors = ["The NOC Project"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["state-memory", "state-plain", "client-http"]
state-memory = []
state-plain = []
client-http = ["ureq"]

[dependencies]
serde = {version = "1.0", features=["derive"]}
serde_json = "1.0"
ureq = {version = "3", optional = true}
log = "0.4"
