[package]
name = "noc-dns-sync"
version = "0.2.1"
authors = ["The NOC Project"]
edition = "2018"
description = "NOC's DNS Syncer"

[[bin]]
name = "noc-dns-sync"
path = "src/main.rs"

[features]
default = ["bind"]
bind = []

[dependencies]
datastream = {path = "../datastream"}
clap = "2.33"
serde = {version = "1.0", features=["derive"]}
serde_json = "1.0"
idna = "0.2"
log = "0.4"
env_logger = "0.8"
